# bf3dp-gh2abb

./: .gitattributes  .pre-commit-config.yaml  README.md  environment.yaml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-test.yaml
docker/: docker-compose.yml
docker/path_plan/: docker-compose.yml
grasshopper/: path_planning.ghx  slice.ghx
src/bf3dp_fab/: __init__.py  __main__.py  fabrication_element.py  rhino_conversions.py  rhino_install.py
src/bf3dp_fab/run/: __main__.py
src/bf3dp_fab/simulation/: agent.py
src/compas_bf3dp_fab_plugin/: __init__.py
