[build-system]
requires = ["setuptools", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "bf3dp-fab"
authors = [
    { name = "Anton Tetov Johansson", email = "anton_tetov.johansson@abm.lth.se" }
]
description = "Design and fabrication package for BF3DP"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["geometry"]
license = { text = "MIT license" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: IronPython",
]
dynamic = ["version"]
dependencies = ["compas_rrc", "compas_fab"]

[project.urls]
Homepage = "https://github.com/biodigitalmatter/bf3dp_fab"
Repository = "https://github.com/biodigitalmatter/bf3dp_fab"
Issues = "https://github.com/biodigitalmatter/bf3dp_fab/issues"

[project.optional-dependencies]
dev = ["black", "ruff", "mypy<1.5", "pre-commit", "pytest"]

[tool.setuptools_scm]
write_to = "src/bf3dp_fab/_version.py"

[tool.black]
target-version = ['py39']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
python_version = "2.7"
show_error_codes = true

[[tool.mypy.overrides]]
module = ["Rhino.*"]
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "pep440"
version_provider = "scm"
update_changelog_on_bump = true
major_version_zero = true
