[metadata]
name = bf3dp-fab

description = Design and fabrication package for BF3DP
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/biodigitalmatter/bf3dp_fab
project_urls =
    Repository = https://github.com/biodigitalmatter/bf3dp_fab
    Issues = https://github.com/biodigitalmatter/bf3dp_fab/issues
author = Anton Tetov Johansson
maintainer = Anton Tetov Johansson
maintainer_email = anton.johansson@arkitektur.lth.se
keywords = geometry
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: IronPython
license = MIT license
license_file = LICENSE

[options]
package_dir =
    =src
packages=find:
zip_safe = False
include_package_data = True
install_requires =
    compas >= 1.10.0, < 1.15
python_requires = >=3.8

[options.packages.find]
where=src

[options.extras_require]
dev =
    black >= 21.5b2
    build >=0.4.0
    flake8
    mypy >= 0.790
    pydocstyle[toml]
    pytest >= 6
    reorder-python-imports >= 2.5.0
    setuptools_scm[toml] >= 4.1,< 7.0

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
extend-ignore = E203
